kubernetes/apps/dependency-track/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dependency-track
  labels:
    app.kubernetes.io/name: dependency-track
