kubernetes/apps/dependency-track/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dependency-track
  namespace: dependency-track
  labels:
    app.kubernetes.io/name: dependency-track
spec:
  selector:
    app.kubernetes.io/name: dependency-track
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
