kubernetes/apps/dependency-track/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-track-tailscale
  namespace: dependency-track
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: dependency-track
      port:
        number: 8080
  tls:
    - hosts:
        - dependency-track
